# zwickfi-monarch

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  cloudbuild.yaml  dev_script.sh  invoke.go  pyproject.toml  requirements.txt
.github/workflows/: cloud-run-job.yml  lint.yml  test.yml
.mm/: mm_session.pickle
secrets/: README.md
src/zwickfi/: __init__.py  __main__.py  auth.py  bigquery.py  cli.py  forecasts.py  monarch.py  utils.py  zwickfi.py
src/zwickfi/.mm/: mm_session.pickle
src/zwickfi/bigquery/: __init__.py  bigquery.py
src/zwickfi/categories/: __init__.py  categories.py
src/zwickfi/forecasts/: __init__.py  forecast.ipynb  forecasts.py
src/zwickfi/monarch/: __init__.py  monarch.py
src/zwickfi/transactions/: __init__.py  transactions.py
tests/: conftest.py  test_app.py  test_monarch_api.py
